versioned_docs/version-2026.1.6/professor/andrey_felipe_martins.mdx
---
sidebar_label: 'Andrey Felipe Martins'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Andrey Felipe Martins",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Lingua estrangeira - Inglês - 1225",
          "size": 2,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_16-2",
          "students": [
            "IIW2026A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Língua Estrangeira - Inglês - 456",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II - 1226",
          "size": 2,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Língua Estrangeira - Inglês - 456",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_5-2",
          "students": [
            "AGO2026B"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Cultura e Identidade Brasileira - 2253",
          "size": 4,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_no_encantado_do_oeste",
          "students": [
            "FPE2025.2"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura I - 1069",
          "size": 2,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_16-2",
          "students": [
            "IIW2026A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Lingua Estrangeira Moderna 1 - Inglês - 179",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_6-2",
          "students": [
            "EIN2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Língua Estrangeira - Inglês - 456",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II - 1226",
          "size": 2,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Língua Estrangeira - Inglês - 456",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_5-2",
          "students": [
            "AGO2026B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura I - 1069",
          "size": 2,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_16-2",
          "students": [
            "IIW2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II (491)",
          "size": 2,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    }
  ],
  "atendimentos": [],
  "teacherInfo": {
    "role": "Professor(a)",
    "notes": ""
  },
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "17:35 - 19:00",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# {data.title}

<div style={{ display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(300px, 1fr))', gap: '20px', marginBottom: '30px' }}>
  
  {/* Card de Atendimento ao Aluno */}
  {data.atendimentos && data.atendimentos.length > 0 && (
    <div style={{
      padding: '20px',
      borderRadius: '16px',
      background: 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)',
      color: 'white',
      boxShadow: '0 10px 20px rgba(0,0,0,0.1)',
      display: 'flex',
      flexDirection: 'column',
      gap: '12px'
    }}>
      <div style={{ display: 'flex', alignItems: 'center', gap: '8px' }}>
        <span style={{ fontSize: '24px' }}>👨‍🏫</span>
        <h3 style={{ margin: 0, color: 'white', fontSize: '1.25rem' }}>Atendimento ao Aluno</h3>
      </div>
      <div style={{ display: 'flex', flexDirection: 'column', gap: '8px' }}>
        {data.atendimentos.map((item, idx) => (
          <div key={idx} style={{ background: 'rgba(255,255,255,0.1)', padding: '8px 12px', borderRadius: '8px', display: 'flex', justifyContent: 'space-between' }}>
            <span style={{ fontWeight: '600' }}>{item.dia}</span>
            <span>{item.horarios}</span>
          </div>
        ))}
      </div>
    </div>
  )}

  <div style={{
    padding: '20px',
    borderRadius: '16px',
    background: 'white',
    border: '1px solid #e2e8f0',
    boxShadow: '0 4px 6px rgba(0,0,0,0.05)',
    display: 'flex',
    flexDirection: 'column',
    gap: '12px'
  }}>
    <div style={{ display: 'flex', alignItems: 'center', gap: '8px' }}>
      <span style={{ fontSize: '24px' }}>ℹ️</span>
      <h3 style={{ margin: 0, color: '#1a202c', fontSize: '1.25rem' }}>Informações</h3>
    </div>
    <div style={{ fontSize: '0.9rem', color: '#4a5568' }}>
      <p><strong>Cargo:</strong> {data.teacherInfo?.role || "Professor"}</p>
      {data.teacherInfo?.notes && <p><strong>Obs:</strong> {data.teacherInfo.notes}</p>}
    </div>
  </div>
</div>

<BrowserOnly>
  {() => (
    <Grid
      title={data.title}
      weekClasses={data.weekClasses}
      time={data.time}
    />
  )}
</BrowserOnly>
